Chapter 08/chap-8-db-user-pod.yaml
#kubectl apply -f chap-8-db-user-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo-pod
spec:
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:
      - name: config
        mountPath: "/config"
        readOnly: true
  volumes:
    # You set volumes at the Pod level, then mount them into containers inside that Pod
    - name: config
      configMap:
        # Provide the name of the ConfigMap you want to mount.
        name: db-config
        # An array of keys from the ConfigMap to create as files
        items:
        - key: "db_connection_string"
          path: "db_connection_string"
        - key: "DB_NAME"
          path: "db_name"
