Chapter 08/chap-8-gitops-deploy.yaml
#kubectl kustomize ./ | kubectl apply -f -
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: prod
  template:
    metadata:
      labels:
        app: frontend
        version: prod
    spec:
      containers:
      - name: demo
        image: alpine:3.15.3
        command: ["sleep", "3600"]
        volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true
      volumes:
        # You set volumes at the Pod level, then mount them into containers inside that Pod
        - name: config
          configMap:
            # Provide the name of the ConfigMap you want to mount.
            name: db-config
            # An array of keys from the ConfigMap to create as files
            items:
            - key: "db_connection_string"
              path: "db_connection_string"
            - key: "DB_NAME"
              path: "db_name"
      nodeSelector:
        CPUType: HIGHCORE
